<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#AB4CAF50"
        android:text="@string/nextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.33" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="106dp"
        android:layout_height="273dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select a building" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/building1"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="@string/building2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="@string/building3" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="@string/building4" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="@string/building5" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="109dp"
        android:layout_height="195dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="352dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select a room" />

        <RadioButton
            android:id="@+id/room1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room1" />

        <RadioButton
            android:id="@+id/room2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room2" />

        <RadioButton
            android:id="@+id/room3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room3" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>